trying to fix scrolling issue on IOS

--- a/stylesheets/sass/main.scss
+++ b/stylesheets/sass/main.scss
@@ -36,6 +36,7 @@ html, body {
     height: 100%;
     margin: 0;
     overflow: hidden;
+    -webkit-overflow-scrolling: touch;
 }
 
 #container {
